alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_10_ends_with_colon.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid package release
 | 
 | 1-foo:
 |   ^ expected positive decimal integer
